# stm-chunked-queues

./: .gitignore  .travis.yml  LICENCE  README.markdown  stm-chunked-queue.cabal  stm-chunked-queues.cabal
src/Control/Concurrent/STM/: ChunkedQueue.hs  TChunkedQueue.hs  TMChunkedQueue.hs
tests/: TChunkedQueue.hs  TMChunkedQueue.hs  TestUtils.hs  UnitTests.hs
