name:          stm-chunked-queues
category:      Todo
version:       0.1.0.0
license:       BSD3
cabal-version: >= 1.18
license-file:  LICENSE
author:        Alexander Kondratskiy
maintainer:    Alexander Kondratskiy <kholdstare0.0@gmail.com>
stability:     provisional
homepage:      http://github.com/kholdstare/stm-chunked-queues/
bug-reports:   http://github.com/kholdstare/stm-chunked-queues/issues
copyright:     Copyright (C) 2014 Alexander Kondratskiy
synopsis:      Thread communication queues that group items/requests that occur close together in time
description:   Todo
build-type:    Simple
tested-with:   GHC == 7.8.1
extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .custom.vim
  travis/cabal-apt-install
  travis/config
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/kholdstare/stm-chunked-queues.git

library
  build-depends:
    base                    >=   4.7.0,

    stm                     >=   2.4,
    async                   >=   2.0.1

  exposed-modules:
    Control.Concurrent.STM.TChunkedQueue
    Control.Concurrent.STM.TMChunkedQueue

  other-modules:
    Control.Concurrent.STM.ChunkedQueue

  ghc-options: -threaded -Wall -fwarn-tabs -O2

  default-language: Haskell98

  hs-source-dirs:
    src
  
test-suite UnitTests
  type:           exitcode-stdio-1.0
  main-is:        UnitTests.hs
  other-modules:
    TChunkedQueue
    TMChunkedQueue
    TestUtils

  ghc-options:    -Wall -threaded
  hs-source-dirs: tests
  default-language: Haskell98
  build-depends:
    base        >= 4.7.0,
    stm         >= 2.4,
    async       >= 2.0.1,

    HUnit       >= 1.2,
    tasty       >= 0.8,
    tasty-hunit >= 0.8,
    stm-chunked-queue
